--- a/sermons/Revelation1:1b-3.tex
+++ b/sermons/Revelation1:1b-3.tex
@@ -21,14 +21,58 @@
 
 
 \section*{Introduction}
-\I  John's prologue underscores the gravity and urgency of Revelation.
+\I  The purpose of John's prologue is to prepare us to read, understand, and 
+    obey the rest of the book.
 \I  The Person of Revelation.
 \I  The Purpose of Revelation.
 
 \section{The Power of Revelation}
-\subsection{The word of God}
-\subsection{The testimony of Jesus Christ}
-\subsection{A personal eyewitness account}
+\I  Lead: There is a reason why verse 2 doesn't simply say, ``who wrote it down.''
+\I  John wants to emphasize the power of what follows, and he does so by describing it in three ways.
+
+\subsection{Eternal: the word of God}
+\I  Lead: Isn't it obvious that Revelation is the word of God?
+\BI \I It should be to us, but not necessarily to the original recipients. \EI
+\I  That Revelation is the word of God means that it is both eternal and living.
+    Eternal in that 
+\BI \I  it does not decay (Isaiah 40:8),
+    \I  is complete, with no part missing or ommitted (22:18-19),
+    \I  is perfect, and nothing can be added to it (Psalm 19:7);
+\EI
+    and living in that it
+\BI \I  transforms, converting the soul (Psalm 19:7),
+    \I  purifies, cleansing from sin (Psalm 119:9-10), and
+    \I  strengthens, producing endurance for trials (Matthew 7:24-27).
+\EI
+\I  And so Revelation does not merely point to the truth, it \emph{is} the truth.
+
+\subsection{Essential: the testimony of Jesus Christ}
+\I  Lead: The next issue, is Revelation essential?
+\BI \I Foundational or secondary?
+    \I Part of the Christian's core curriculum, or an optional specialty?
+\EI
+\I  Holding to the testimony of Jesus Christ is the essence of what a Christian is. It was 
+\BI \I  the reason for John's exile on Patmos (1:9), and
+    \I  the reason why the saints were killed (6:9) and beheaded (20:4).
+    \I  Believers are described as those who have the testimony of Jesus Christ (12:17),
+    \I  and they overcome Satan by clinging to it, even to death (12:11).
+\EI
+\I  Testimony means a legally-binding witness as submitted to a judge.
+\BI \I  As if Jesus is on the witness stand of a courtroom, and outlines 
+        who He is, what He has done, and what He will do. \EI
+\I  That Revelation is the testimony of Jesus Christ means that it is the essential truth of Jesus 
+    (who He is, what He has done, and what He will do)
+    that every Christian must cling to.
+
+\subsection{Eyewitness: all things that he saw}
+\I  John emphasizes that Revelation is a personal eyewitness account,
+\BI \I  Not something he thought up or figured out. \EI
+\I  Highlights the divine origin of the letter.
+\BI \I  Revelation does not depend at all on Jon's ability to pastor, preach, interpret, or organize.
+    \I  John only needs to see/hear and copy it down.
+    \I  He is effectively Jesus' scribe/typist.
+\EI
+\I  Allows us to step into John's shoes and see what he saw.
 
 \section{The Promise of Revelation}
 \subsection{What is the blessing?}
