--- a/sermons/Revelation1:1b-3.tex
+++ b/sermons/Revelation1:1b-3.tex
@@ -23,8 +23,9 @@
 \section*{Introduction}
 \I  The purpose of John's prologue is to prepare us to read, understand, and 
     obey the rest of the book.
-\I  The Person of Revelation.
-\I  The Purpose of Revelation.
+\I  John does so by telling us (from last time)
+\BI \I  the Person of Revelation, and
+    \I  the purpose of Revelation. \EI
 
 \section{The Power of Revelation}
 \I  Lead: There is a reason why verse 2 doesn't simply say, ``who wrote it down.''
@@ -68,7 +69,7 @@
 \I  John emphasizes that Revelation is a personal eyewitness account,
 \BI \I  Not something he thought up or figured out. \EI
 \I  Highlights the divine origin of the letter.
-\BI \I  Revelation does not depend at all on Jon's ability to pastor, preach, interpret, or organize.
+\BI \I  Revelation does not depend at all on John's ability to pastor, preach, interpret, or organize.
     \I  John only needs to see/hear and copy it down.
     \I  He is effectively Jesus' scribe/typist.
 \EI
@@ -76,8 +77,34 @@
 
 \section{The Promise of Revelation}
 \subsection{What is the blessing?}
+\I  New life in Christ, or to have Christ wholly:
+\BI \I  Jesus confesses you before the Father,
+    \I  not hurt by the second death,
+    \I  clothed in white garments, 
+    \I  to eat from the tree of life,
+    \I  to be given hidden manna to eat, and
+    \I  given the morning star. \EI
+\I  New identity in Christ, or to be Christ's wholly:
+\BI \I  given a white stone with a new name no one else knows,
+    \I  inscribed with the names of the Father, the Son, and the new Jerusalem,
+    \I  to be a pillar in the temple of God and never leave,
+    \I  to have power over the nations like Jesus, and
+    \I  to sit with Christ on His throne. \EI
+
 \subsection{Who is the blessing for?}
-\subsection{What does the blessing mean?}
+\I  Lead: Is it for select believers, or for the Church universal?
+\I  The blessing is for those who overcome.
+\BI \I All true believers overcome the world (1 John 5:5). \EI
+\I  The blessing, essentially salvation in Jesus Christ, shows that it is for
+    all Christians.
+
+\subsection{How does the blessing matter?}
+\I  Lead: Casts the Christian life in an entirely new light; it shows us 
+\BI \I  what we are fighting for,
+    \I  who we are fighting against,
+    \I  how we must be victorious. \EI
+\I  Christ's commands are not optional.
+\I  The blessing gices us he power and motivation to overcome.
 
 \EI
 \end{document}
