--- a/sermons/Revelation1:1b-3.tex
+++ b/sermons/Revelation1:1b-3.tex
@@ -21,6 +21,21 @@
 
 
 \section*{Introduction}
+\I  Spiritual telescope to see
+\BI \I  Jesus in heaven,
+    \I  what He is doing, and
+    \I  what He wants us to do, \EI
+    it would (I hope!) have a profound affect on how we live.
+    Revelation is that spiritual telescope.
+\I  Of course, the whole Bible does this for us in some measure, but Revelation is special\ldots 
+\I  Revelation is a paradigm-shifting book for the Christian in that it shows us
+    what our lives are about. 
+    Especially in the fog of battle (the distractions and confusions in our lives),
+    Revelation gives us understanding and direction.
+\BI \I  Who Jesus Christ is,
+    \I  what He is doing and will do; and in light of this,
+    \I  who He has made us,
+    \I  and what He would have us do. \EI
 \I  The purpose of John's prologue is to prepare us to read, understand, and 
     obey the rest of the book.
 \I  John does so by telling us (from last time)
