--- a/sermons/Revelation1:1b-3.tex
+++ b/sermons/Revelation1:1b-3.tex
@@ -76,30 +76,50 @@
 \I  Allows us to step into John's shoes and see what he saw.
 
 \section{The Promise of Revelation}
+\I  Revelation is unique in that it promises and emphasizes blessing from the very beginning.
+\BI \I  ``he who reads and those who hear'', the proclaimer and the hearer,
+    \I  ``and keep those things which are written in it'', above all, the doer,
+    \I  ``for the time is near.'', there is an urgency to know and obey. \EI
+\I  The blessings are concentrated in the 7 letters to the churches in Asia Minor.
+\BI \I  Evaluation, ``I know your works'',
+    \I  Command, repent and hold fast,
+    \I  Blessing, ``to him who overcomes''. \EI
+
 \subsection{What is the blessing?}
-\I  New life in Christ, or to have Christ wholly:
+\I  Lead: We need to answer three questions regarding the blessing\ldots
+\I  New life in Christ, that you have Christ fully: 
 \BI \I  Jesus confesses you before the Father,
     \I  not hurt by the second death,
     \I  clothed in white garments, 
     \I  to eat from the tree of life,
     \I  to be given hidden manna to eat, and
     \I  given the morning star. \EI
-\I  New identity in Christ, or to be Christ's wholly:
+\I  New identity in Christ, that Christ has you fully:
 \BI \I  given a white stone with a new name no one else knows,
     \I  inscribed with the names of the Father, the Son, and the new Jerusalem,
     \I  to be a pillar in the temple of God and never leave,
     \I  to have power over the nations like Jesus, and
     \I  to sit with Christ on His throne. \EI
+\I  Note: The blessing is attractive to the extent that we are attracted to Jesus.
+\BI \I  Which is why seeing Him in all His glory (as Revelation reveals Him to us)
+        is so critical to living a victorious Christian life. \EI
 
 \subsection{Who is the blessing for?}
 \I  Lead: Is it for select believers, or for the Church universal?
-\I  The blessing is for those who overcome.
-\BI \I All true believers overcome the world (1 John 5:5). \EI
 \I  The blessing, essentially salvation in Jesus Christ, shows that it is for
     all Christians.
+\I  At the same time, the blessing is for those who overcome.
+\BI \I This is confirmed by 1 John 5:4-5, 
+        which tells us that all true believers overcome the world (1 John 5:5). \EI
+\I  This means that there is no such thing as a 
+    perpetually disobedient or continually defeated Christian.
+\BI \I  Not that a believer does not sin, but that he repents when he sins.
+    \I  The two repeated commands in chapters 2 and 3 are to repent of the wrong,
+        and to hold fast to the good. \EI
 
 \subsection{How does the blessing matter?}
-\I  Lead: Casts the Christian life in an entirely new light; it shows us 
+\I  Lead: Casts the Christian life in an entirely different light from what we often consider; 
+        it shows us 
 \BI \I  what we are fighting for,
     \I  who we are fighting against,
     \I  how we must be victorious. \EI
