--- a/sermons/Revelation1:1b-3.tex
+++ b/sermons/Revelation1:1b-3.tex
@@ -7,44 +7,40 @@
 \part*{Revelation 1:1b-3 --- The Power and Promise of the Revelation of Jesus Christ}
 \tableofcontents
 \BI
-\section*{Notes}
-\I  The point of this sermon is:
-        \begin{quote} 
-        You need to know and obey the Revelation of Jesus Christ.
-        \end{quote}
-\I  Remember that with every subsection, your job is to answer three questions:
-    \begin{enumerate}
-    \I  What does it mean?
-    \I  Why does it matter?
-    \I  How does it change my life?
-    \end{enumerate}
-
+% \section*{Notes}
+% \I  The point of this sermon is:
+%         \begin{quote} 
+%         You need to know and obey the Revelation of Jesus Christ.
+%         \end{quote}
+% \I  Remember that with every subsection, your job is to answer three questions:
+%     \begin{enumerate}
+%     \I  What does it mean?
+%     \I  Why does it matter?
+%     \I  How does it change my life?
+%     \end{enumerate}
+% 
 
 \section*{Introduction}
-\I  Spiritual telescope to see
-\BI \I  Jesus in heaven,
-    \I  what He is doing, and
-    \I  what He wants us to do, \EI
-    it would (I hope!) have a profound affect on how we live.
-    Revelation is that spiritual telescope.
-\I  Of course, the whole Bible does this for us in some measure, but Revelation is special\ldots 
-\I  Revelation is a paradigm-shifting book for the Christian in that it shows us
-    what our lives are about. 
-    Especially in the fog of battle (the distractions and confusions in our lives),
-    Revelation gives us understanding and direction.
-\BI \I  Who Jesus Christ is,
-    \I  what He is doing and will do; and in light of this,
-    \I  who He has made us,
-    \I  and what He would have us do. \EI
-\I  The purpose of John's prologue is to prepare us to read, understand, and 
-    obey the rest of the book.
-\I  John does so by telling us (from last time)
-\BI \I  the Person of Revelation, and
-    \I  the purpose of Revelation. \EI
+\I  Revelation is a paradigm-shifting book for the Christian.
+\BI \I  Literally an unveiling of present and future realities.
+    \I  Identifies what is eternal and what is not.
+    \I  Identifies who is in God's army and who is in Satan's.
+    \I  Jesus Christ's personal evaluation of His Church. \EI
+
+\section*{Review}
+\I  In the first three verses, John gets us ready for the rest of the book.
+    He gives us four preparations for the book of Revelation.
+\I  The Person of Revelation
+\BI \I  Jesus Christ is the focus of Revelation.
+    \I  All about who Jesus Christ is and what He will do. 
+    \I  Not so much about how the world will end, as how Jesus Christ will end the world.
+    \I  We are first and foremost learning about Jesus; not about seals, trumpets, bowls, beasts\ldots \EI
+\I  The Purpose of Revelation
 
 \section{The Power of Revelation}
 \I  Lead: There is a reason why verse 2 doesn't simply say, ``who wrote it down.''
-\I  John wants to emphasize the power of what follows, and he does so by describing it in three ways.
+\BI \I  John wants us to have the correct attitude in approaching Revelation.
+    \I  He wants us to be aware of the nature of what we are reading. \EI
 
 \subsection{Eternal: the word of God}
 \I  Lead: Isn't it obvious that Revelation is the word of God?
@@ -61,21 +57,30 @@
     \I  strengthens, producing endurance for trials (Matthew 7:24-27).
 \EI
 \I  And so Revelation does not merely point to the truth, it \emph{is} the truth.
+\I  Side-note: What's so special about Revelation? 
+    Isn't the rest of the Bible the word of God too?
+\BI \I  Yes, Revelation \emph{actually is} part of the Bible.
+    \I  Furthermore, Revelation is especially important to us, the post-apostolic Church. \EI
+\I  Where do you go when you are wrestling with sin, discouraged, worn out, or without hope?
+\BI \I  Go to Revelation, you will leave changed, transformed, and steadfast. 
+    \I  Because you will behold the glory of the Word of God, Jesus Christ,
+        and you will be transformed into the same image from glory to glory (2 Corinthians 3:18) \EI
 
 \subsection{Essential: the testimony of Jesus Christ}
 \I  Lead: The next issue, is Revelation essential?
 \BI \I Foundational or secondary?
     \I Part of the Christian's core curriculum, or an optional specialty?
 \EI
-\I  Holding to the testimony of Jesus Christ is the essence of what a Christian is. It was 
-\BI \I  the reason for John's exile on Patmos (1:9), and
-    \I  the reason why the saints were killed (6:9) and beheaded (20:4).
-    \I  Believers are described as those who have the testimony of Jesus Christ (12:17),
-    \I  and they overcome Satan by clinging to it, even to death (12:11).
-\EI
 \I  Testimony means a legally-binding witness as submitted to a judge.
 \BI \I  As if Jesus is on the witness stand of a courtroom, and outlines 
         who He is, what He has done, and what He will do. \EI
+\I  Holding to the testimony of Jesus Christ is the essence of what a Christian is. It was 
+\BI \I  the reason for John's exile on Patmos (1:9), and
+    \I  the reason why the saints were killed (6:9) and beheaded (20:4).
+    \I  Believers are described (defined) as those who have the testimony of Jesus Christ (12:17),
+    \I  and they overcome Satan by clinging to it, even to death (12:11).
+\EI
+\I  Connection: John calls Revelation \emph{is} the testimony of Jesus Christ.
 \I  That Revelation is the testimony of Jesus Christ means that it is the essential truth of Jesus 
     (who He is, what He has done, and what He will do)
     that every Christian must cling to.
@@ -88,7 +93,7 @@
     \I  John only needs to see/hear and copy it down.
     \I  He is effectively Jesus' scribe/typist.
 \EI
-\I  Allows us to step into John's shoes and see what he saw.
+\I  Revelation is very direct, there is hardly a mediator between us and Jesus.
 
 \section{The Promise of Revelation}
 \I  Revelation is unique in that it promises and emphasizes blessing from the very beginning.
@@ -109,37 +114,47 @@
     \I  to eat from the tree of life,
     \I  to be given hidden manna to eat, and
     \I  given the morning star. \EI
+    In other words, to have eternal life, which is knowing Jesus Christ, and to be unhindered in experiencing Him.
 \I  New identity in Christ, that Christ has you fully:
 \BI \I  given a white stone with a new name no one else knows,
     \I  inscribed with the names of the Father, the Son, and the new Jerusalem,
     \I  to be a pillar in the temple of God and never leave,
     \I  to have power over the nations like Jesus, and
     \I  to sit with Christ on His throne. \EI
+    To be completely owned by Christ, to have Him take every aspect of who you are and make you fully His.
+\I  These blessings are the hope, goal, and anticipation of the Christian.
+\BI \I  These form the motivation for our obedience to Christ. \EI
 \I  Note: The blessing is attractive to the extent that we are attracted to Jesus.
 \BI \I  Which is why seeing Him in all His glory (as Revelation reveals Him to us)
         is so critical to living a victorious Christian life. \EI
 
 \subsection{Who is the blessing for?}
 \I  Lead: Is it for select believers, or for the Church universal?
-\I  The blessing, essentially salvation in Jesus Christ, shows that it is for
-    all Christians.
-\I  At the same time, the blessing is for those who overcome.
-\BI \I This is confirmed by 1 John 5:4-5, 
-        which tells us that all true believers overcome the world (1 John 5:5). \EI
-\I  This means that there is no such thing as a 
-    perpetually disobedient or continually defeated Christian.
-\BI \I  Not that a believer does not sin, but that he repents when he sins.
-    \I  The two repeated commands in chapters 2 and 3 are to repent of the wrong,
-        and to hold fast to the good. \EI
+\BI \I  The blessing, essentially salvation in Jesus Christ, shows that it is for
+        all Christians.
+    \I  At the same time, there is a condition on the blessing: it is for those who overcome. \EI
 
-\subsection{How does the blessing matter?}
-\I  Lead: Casts the Christian life in an entirely different light from what we often consider; 
-        it shows us 
-\BI \I  what we are fighting for,
-    \I  who we are fighting against,
-    \I  how we must be victorious. \EI
-\I  Christ's commands are not optional.
-\I  The blessing gices us he power and motivation to overcome.
+\I  The inevitable conclusion is that all true believers must and do overcome the world. 
+\BI \I This is confirmed by 1 John 5:4-5. \EI
+
+\I  In other words, there is no way to get to God except to persevere through the fires of this world.
+\BI \I  We are saved by grace through faith and that not of ourselves, but know also that the genuineness of our faith will be tested in the furnace of trial (1 Peter 1:6-7). \EI
+
+\I  Every Christian will be tempted and tried.  
+    Satan and the world will not choose to pass over any single believer.
+\BI \I  In God's sovereignty, not every believer is tried in the same way nor to the same extent.
+    \I  However, every believer is tried, including American believers. \EI
+
+\I  Now, many of us may not experience this reality. There are really only two explanations for this.
+\BI \I  Either our faith is not genuine (just intellectual assent, a set of morals, showing up at church on Sundays),
+    \I  or we are not being obedient (avoiding confrontation with the world by choosing to disobey God). 
+        Too scared to evangelize, too busy to edify, too comfortable for sanctification\ldots\EI
+\I  We overcome by repenting of our sin, and holding fast to the good.
+\BI \I  The one who overcomes does not always obey, but he does always repent.
+    \I  He may stumble but he cannot continue in sin, in the end, he values the prize of Jesus Christ more than the things of this world. 
+    \I  As we will see, the call to the 7 churches is to overcome by holding fast to the good, and by repenting of the bad.
+    \I  This repentance is not easy, and it will lead to a life of adversity with the world;
+        but also an incalculable blessing in the life to come. \EI
 
 \EI
 \end{document}
