Got formatting from springer.

--- a/presentations/meta_book/d.tex
+++ b/presentations/meta_book/d.tex
@@ -1,4 +1,4 @@
-\documentclass{article}
+\documentclass{svmono}
 \title{Draft of Objective-first Design Chapter for Metamaterials Design Book}
 \author{Jesse Lu}
 \begin{document}
