Getting started on text.

--- a/presentations/meta_book/ob1.tex
+++ b/presentations/meta_book/ob1.tex
@@ -1,9 +1,21 @@
 
 \section{The objective-first design problem}
-intro
+We now build off of the field-solver and the structure-solver,
+    as previously outlined,
+    by formulating the design problem
+    and outlining the objective-first strategy.
 
 \subsection{Design objectives}
-Talk about $f(x)$ and that we are interested in convex ones.
+A design objective, $f(x)$, is simply defined as
+    a function we wish to be minimal 
+    for the design to be produced.
+
+For instance, in the design of a device
+    which must transmit efficiently into a particular mode,
+    we could choose $f(x)$ to be the negative power into that mode.
+Or, if the device was to be a low-loss resonator,
+    we could choose $f(x)$ to be the amount of power leaking 
+    out of the device.
 
 \subsection{Convexity}
 Convex optimization quick intro.
