--- a/presentations/meta_book/my_chapter.tex
+++ b/presentations/meta_book/my_chapter.tex
@@ -7,19 +7,34 @@
 \newcommand{\minimize}[1]{\JLUminimize_{#1}\;&}
 \newcommand{\subto}{\text{subject to}\;&}
 \newcommand{\myfig}[2]{\begin{figure}[!h]\includegraphics[width=\textwidth]{fig/#1}\caption{#2}\label{#1}\end{figure}}
-
+\newcommand{\BI}{\begin{itemize}\item}
+\renewcommand{\I}{\item}
+\newcommand{\EI}{\end{itemize}}
+\newcommand{\ER}[1]{\eqref{eq:#1}}
 \chapter{Objective-First Nanophotonic Design}
 \label{intro}
 
 \abstract{The abstract for the book.}
 
-Introductory paragraph.
+In this chapter, we introduce an ``objective-first'' strategy 
+    for designing nanophotonic devices.
+
+General description:
+\BI Only uses desired fields.
+\I  Can attempt to design any linear device.
+\I  Allows for non-physical fields. \EI
+
+This strategy is unique in that it
+    asks the user only for what electromagnetic field
+    the device should produce,
+    and then attempts to generate the design
+    without further user intervention.
 
 \input{wave_eq}
 \input{ob1}
-\input{1d}
-\input{res}
-\input{wg}
+% \input{1d}
+% \input{res}
+% \input{wg}
 
 \section{Metamaterials design}
 \subsection{Modification of the design objective}
