--- a/presentations/meta_book/my_chapter.tex
+++ b/presentations/meta_book/my_chapter.tex
@@ -13,7 +13,14 @@
 
 \abstract{The abstract for the book.}
 
-Introductory paragraph.
+In this chapter, we are excited to introduce an ``objective-first'' strategy
+    for the design of linear nanophotonic devices.
+In principle, objective-first design allows one to design
+    \emph{any} linear nanophotonic device 
+    using only knowledge of the electromagnetic field
+    that we desire it to produce.
+
+Enjoy!
 
 \input{wave_eq}
 \input{ob1}
@@ -30,6 +37,7 @@ Introductory paragraph.
 \subsection{3D}
 \subsection{Multi-mode}
 \subsection{Robustness}
+\subsection{Binary structure}
 
 
 \section{Appendix}
