--- a/presentations/meta_book/wave_eq.tex
+++ b/presentations/meta_book/wave_eq.tex
@@ -1,7 +1,13 @@
 \section{The electromagnetic wave equation}
+
 \subsection{Physics formulation}
-Let's talk about the electromagnetic wave equation from a physics standpoint.
-Let's start from Maxwell's equations without currents.
+We will start by reviewing 
+    the fundamental physical equation governing nanophotonics, 
+    the electromagnetic wave equation.
+
+We first derive the wave equation by starting with Maxwell's equations:
+
+
 \BA \curl E = - \mu_0 \frac{\partial H}{\partial t} \\
     \curl H = J + \epsilon \frac{\partial E}{\partial t} \EA
 
