--- a/presentations/meta_book/wave_eq.tex
+++ b/presentations/meta_book/wave_eq.tex
@@ -101,7 +101,7 @@ Although additional mathematical machinery must still be added
     we have really shown so far is that the wave equation is 
     separately linear or \emph{bi-linear} in $x$ and $p$.
 Namely that,
-\BE A(p)x-b(p) = B(x)p - d(x). \EE
+\BE A(p)x-b(p) = B(x)p - d(x). \label{eq:bilinear} \EE
 In other words, fixing $p$ makes solving the wave equation for $x$
     a linear problem, and vice versa.
 Note that the joint problem,
