--- a/presentations/meta_book/my_chapter.tex
+++ b/presentations/meta_book/my_chapter.tex
@@ -6,6 +6,10 @@
 \newcommand{\curl}{\nabla\times}
 \newcommand{\minimize}[1]{\JLUminimize_{#1}\;&}
 \newcommand{\subto}{\text{subject to}\;&}
+
+% Custom figures.
+% smallfig/ directory is for lo-fi figures,
+% fig/ directory is for full resolution.
 \newcommand{\myfig}[2]{\begin{figure}[!h]\includegraphics[width=\textwidth]{fig/#1}\caption{#2}\label{#1}\end{figure}}
 \newcommand{\BI}{\begin{itemize}\item}
 \renewcommand{\I}{\item}
@@ -32,9 +36,9 @@ This strategy is unique in that it
 
 \input{wave_eq}
 \input{ob1}
-% \input{1d}
-% \input{res}
-% \input{wg}
+\input{1d}
+\input{res}
+\input{wg}
 
 \section{Metamaterials design}
 \subsection{Modification of the design objective}
