--- a/presentations/meta_book/my_chapter.tex
+++ b/presentations/meta_book/my_chapter.tex
@@ -10,7 +10,7 @@
 % Custom figures.
 % smallfig/ directory is for lo-fi figures,
 % fig/ directory is for full resolution.
-\newcommand{\myfig}[2]{\begin{figure}[!h]\includegraphics[width=\textwidth]{fig/#1}\caption{#2}\label{#1}\end{figure}}
+\newcommand{\myfig}[2]{\begin{figure}[!h]\includegraphics[width=\textwidth]{fig/#1.jpg}\caption{#2}\label{#1}\end{figure}}
 \newcommand{\BI}{\begin{itemize}\item}
 \renewcommand{\I}{\item}
 \newcommand{\EI}{\end{itemize}}
@@ -36,8 +36,8 @@ This strategy is unique in that it
 
 \input{wave_eq}
 \input{ob1}
-\input{1d}
-\input{res}
+% \input{1d}
+% \input{res}
 \input{wg}
 
 \section{Metamaterials design}
